@@ -1,6 +1,7 @@
 package com.sxt;
 
 import java.awt.image.BufferedImage;
+import java.time.Instant;
 
 public class Enemy implements Runnable{
     //存储当前坐标
@@ -17,6 +18,8 @@ public class Enemy implements Runnable{
     //食人花运动的极限范围
     private int max_up = 0;
     private int max_down = 0;
+    private int max_R = 0;
+    private int max_L = 0;
     //定义线程对象
     private Thread thread = new Thread(this);
     //定义当前的图片的状态
@@ -29,7 +32,7 @@ public class Enemy implements Runnable{
         this.face_to = face_to;
         this.type = type;
         this.bg = bg;
-        show = StaticValue.mogu.get(0);
+        show = StaticValue.mogu.getFirst();
         thread.start();
     }
     //食人花敌人的构造函数
@@ -41,15 +44,42 @@ public class Enemy implements Runnable{
         this.max_up = max_up;
         this.max_down = max_down;
         this.bg = bg;
-        show = StaticValue.flower.get(0);
+        show = StaticValue.flower.getFirst();
+        thread.start();
+    }
+    //乌龟的构造函数
+    public Enemy(int x,int y,boolean face_to,int type,int max_L,int max_R,BackGround bg,int life) {
+        this.x = x;
+        this.y = y;
+        this.face_to = face_to;
+        this.type = type;
+        this.max_R = max_R;
+        this.max_L = max_L;
+        this.bg = bg;
+        show = StaticValue.wugui.getFirst();
         thread.start();
     }
 
     //死亡方法
     public void death() {
         show = StaticValue.mogu.get(2);
+        try {
+            Thread.sleep(50);
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
         this.bg.getEnemyList().remove(this);
     }
+    public void death(int a) {
+        show = StaticValue.wugui.get(2);
+        try {
+            Thread.sleep(50);
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+        this.bg.getEnemyList().remove(this);
+    }
+
 
     public int getX() {
         return x;
@@ -70,6 +100,7 @@ public class Enemy implements Runnable{
     @Override
     public void run() {
         while (true) {
+
             //判断是否是蘑菇敌人
             if (type == 1) {
                 if (face_to) {
@@ -105,6 +136,43 @@ public class Enemy implements Runnable{
             else if ((!face_to) && (!canRight) || this.x == 764) {
                 face_to = true;
             }
+            //乌龟敌人
+            if (type == 3) {
+                if (face_to) {
+                    this.x -= 2;
+                }else {
+                    this.x += 2;
+                }
+                image_type = image_type == 1 ? 0 : 1;
+
+                show = StaticValue.wugui.get(image_type);
+            }
+
+            //定义两个布尔变量
+            canLeft = true;
+            canRight = true;
+
+            for (int i = 0;i < bg.getObstacleList().size();i++) {
+                Obstacle ob1 = bg.getObstacleList().get(i);
+                //判断是否可以右走
+                if (ob1.getX() == this.x + 36 && (ob1.getY() + 65 > this.y && ob1.getY() - 35 < this.y)) {
+                    canRight = false;
+                }
+
+                //判断是否可以左走
+                if (ob1.getX() == this.x - 36 && (ob1.getY() + 65 > this.y && ob1.getY() - 35 < this.y)) {
+                    canLeft = false;
+                }
+            }
+
+            if (face_to && !canLeft || this.x == 0) {
+                face_to = false;
+            }
+            else if ((!face_to) && (!canRight) || this.x == 764) {
+                face_to = true;
+            }
+
+
 
             //判断是否是食人花敌人
             if (type == 2) {
@@ -115,6 +183,7 @@ public class Enemy implements Runnable{
                 }
 
                 image_type = image_type == 1 ? 0 : 1;
+
 
                 //食人花是否到达极限位置
                 if (face_to && (this.y == max_up)) {
@@ -135,4 +204,9 @@ public class Enemy implements Runnable{
 
         }
     }
+
+
+
+
+
 }
